# OctoPrint-FirmwareUpdater

./: .gitattributes  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/: stale.yml
.github/ISSUE_TEMPLATE/: problem-report.md
.github/workflows/: close-stale.yml  lock-closed.yml  unlock-reopened.yml
doc/: avrdude.md  bootcommander.md  bossac.md  dfu-util.md  dfuprog.md  esptool.md  lpc176x.md  marlinbft.md  stm32flash.md
extras/: README.txt  firmware_updater.md  firmwareupdater.md
octoprint_firmware_updater/: __init__.py
octoprint_firmwareupdater/: __init__.py
octoprint_firmwareupdater/methods/: avrdude.py  bootcmdr.py  bossac.py  custom.py  dfuprog.py  dfuutil.py  esptool.py  lpc1768.py  marlinbft.py  stm32flash.py
octoprint_firmwareupdater/static/css/: firmwareupdater.css
octoprint_firmwareupdater/static/js/: firmwareupdater.js
octoprint_firmwareupdater/templates/: firmwareupdater_navbar.jinja2  firmwareupdater_settings.jinja2  firmwareupdater_sidebar.jinja2  firmwareupdater_tab.jinja2
tests/: test_firmwareupdater.py
translations/: README.txt
